--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Cuttle Shuttle"
     url: /
+  - title: "Dataset"
+    url: https://www.dropbox.com/sh/ep5j63nyx1by4tf/AAAJPIddR6b8YR787KuizMQya?dl=0
   - title: "Analysis"
     url: https://github.com/everymind/CuttleShuttle-Analysis
 
